--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-filter": "^1.0.2",
     "gulp-livereload": "^2.1.1",
     "gulp-livescript": "^2.3.0",
+    "gulp-stylus": "^2.0.0",
     "gulp-uglify": "^1.0.2",
     "liveify": "^1.3.1",
     "main-bower-files": "^2.4.1",
