--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "react-livescript-seed",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "authors": "Pomin Wu (pm5) <pomin5@gmail.com>",
   "license": "MIT",
   "scripts": {
     "republish": "lsc -cj package.ls && lsc -cj bower.ls && lsc -cpb webpack.config.ls > webpack.config.js",
-    "build": "gulp build",
-    "dev": "gulp dev"
+    "build": "webpack -p",
+    "dev": "webpack -d --watch"
   },
   "private": true,
   "dependencies": {
     "bower": "^1.3.12",
     "connect-livereload": "^0.5.2",
-    "flux": "^2.0.1",
     "express": "^4.10.6",
+    "file-loader": "^0.8.1",
+    "flux": "^2.0.1",
     "gulp": "^3.8.10",
     "gulp-bower": "0.0.7",
     "gulp-browserify": "^0.5.0",
@@ -24,7 +25,12 @@
     "gulp-stylus": "^2.0.0",
     "gulp-uglify": "^1.0.2",
     "liveify": "^1.3.1",
+    "livescript-loader": "^0.1.3",
     "main-bower-files": "^2.4.1",
-    "tiny-lr": "^0.1.4"
+    "style-loader": "^0.8.3",
+    "stylus-loader": "^1.0.0",
+    "tiny-lr": "^0.1.4",
+    "url-loader": "^0.5.5",
+    "webpack": "^1.7.3"
   }
 }
